--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
+#server.port=8080
+#spring.application.name=policies
+#spring.datasource.url=jdbc:h2:file:./db-file
+#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+# application-test.properties ?for test?
 server.port=8080
 spring.application.name=policies
-spring.datasource.url=jdbc:h2:file:./db-file
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
